--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "fastify": "^4.28.0",
+    "fastify-socket.io": "^5.0.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "typeorm": "^0.3.20"
   },
   "scripts": {
